Fix composite parser properties.