@@ -4,6 +4,8 @@ import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -24,6 +26,7 @@ import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
  *
  * @author Ullrich Hafner
  */
+// FIXME: this class should be an enum
 @Immutable
 public class Severity implements Serializable {
     @Serial
@@ -38,7 +41,9 @@ public class Severity implements Serializable {
     /** A warning with priority low. Mapping of warning priorities is determined by the corresponding tool. */
     public static final Severity WARNING_LOW = new Severity("LOW");
 
-    private static final Set<Severity> ALL_SEVERITIES = Set.of(ERROR, WARNING_HIGH, WARNING_NORMAL, WARNING_LOW);
+    private static final Set<Severity> ALL_SEVERITIES
+            = Collections.unmodifiableSet(new LinkedHashSet<>(
+                    List.of(ERROR, WARNING_HIGH, WARNING_NORMAL, WARNING_LOW)));
 
     /**
      * Creates a new {@link Severity} with the specified name. If the name is the same as the name of one of the
